# nilmtk-converters

./: .gitignore  Makefile  pyproject.toml
nilmtk_converters/: __init__.py
nilmtk_converters/ampds/: convert_ampds.py
nilmtk_converters/caxe/: convert_caxe.py
nilmtk_converters/combed/: convert_combed.py  download.py
nilmtk_converters/dataport/: csv_converter.py  download_dataport.py
nilmtk_converters/deddiag/: convert_deddiag.py
nilmtk_converters/dred/: convert_dred.py
nilmtk_converters/eco/: convert_eco.py
nilmtk_converters/greend/: convert_greend.py
nilmtk_converters/hes/: convert_hes.py
nilmtk_converters/hipe/: convert_hipe.py
nilmtk_converters/hipe/examples/: 01_test_conversion.ipynb  02_run_experiments.ipynb
nilmtk_converters/iawe/: convert_iawe.py
nilmtk_converters/ideal/: convert_ideal.py
nilmtk_converters/redd/: convert_redd.py
nilmtk_converters/refit/: convert_refit.py
nilmtk_converters/smart/: convert_smart.py
nilmtk_converters/ukdale/: convert_ukdale.py
